force-app/main/default/objects/calculator__c/calculator__c.object-meta.xml
<CustomObject>
    <label>calculator</label>
    <nameField>
        <label>calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>