force-app/main/default/objects/calculator__c/fields/interest__c.field-meta.xml
<CustomField>
    <fullName>interest__c</fullName>
    <label>interest</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>