force-app/main/default/objects/calculator__c/fields/Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>