force-app/main/default/objects/calculator__c/fields/Loan_term__c.field-meta.xml
<CustomField>
    <fullName>Loan_term__c</fullName>
    <label>Loan term</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>